_generated-doc/3.2/config/quarkus-vertx-http-config-group-server-ssl-config.adoc

:summaryTableId: quarkus-vertx-http-config-group-server-ssl-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-http-config-group-server-ssl-config_configuration]]link:#quarkus-vertx-http-config-group-server-ssl-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-credentials-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-credentials-provider[quarkus.http.ssl.certificate.credentials-provider]`


[.description]
--
The `CredentialsProvider`. If this property is configured, then a matching 'CredentialsProvider' will be used to get the keystore, keystore key, and truststore passwords unless these passwords have already been configured. Please note that using MicroProfile `ConfigSource` which is directly supported by Quarkus Configuration should be preferred unless using `CredentialsProvider` provides for some additional security and dynamism.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-credentials-provider-name]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-credentials-provider-name[quarkus.http.ssl.certificate.credentials-provider-name]`


[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-files]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-files[quarkus.http.ssl.certificate.files]`


[.description]
--
The list of path to server certificates using the PEM format. Specifying multiple files requires SNI to be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-files]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-files[quarkus.http.ssl.certificate.key-files]`


[.description]
--
The list of path to server certificates private key files using the PEM format. Specifying multiple files requires SNI to be enabled. The order of the key files must match the order of the certificates.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-file]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-file[quarkus.http.ssl.certificate.key-store-file]`


[.description]
--
An optional key store that holds the certificate information instead of specifying separate files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-file-type]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-file-type[quarkus.http.ssl.certificate.key-store-file-type]`


[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-provider[quarkus.http.ssl.certificate.key-store-provider]`


[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-password[quarkus.http.ssl.certificate.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file. If not given, and if it can not be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|`password`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-password-key]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-password-key[quarkus.http.ssl.certificate.key-store-password-key]`


[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password of the key store file from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-key-alias]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-key-alias[quarkus.http.ssl.certificate.key-store-key-alias]`


[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, and the key store contains multiple keys and no alias is specified; the behavior is undefined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-key-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-key-password[quarkus.http.ssl.certificate.key-store-key-password]`


[.description]
--
An optional parameter to define the password for the key, in case it is different from `key-store-password` If not given, it might be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-key-password-key]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-key-store-key-password-key[quarkus.http.ssl.certificate.key-store-key-password-key]`


[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password for the key from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-file]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-file[quarkus.http.ssl.certificate.trust-store-file]`


[.description]
--
An optional trust store that holds the certificate information of the trusted certificates.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-file-type]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-file-type[quarkus.http.ssl.certificate.trust-store-file-type]`


[.description]
--
An optional parameter to specify the type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-provider[quarkus.http.ssl.certificate.trust-store-provider]`


[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-password[quarkus.http.ssl.certificate.trust-store-password]`


[.description]
--
A parameter to specify the password of the trust store file. If not given, it might be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-password-key]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-password-key[quarkus.http.ssl.certificate.trust-store-password-key]`


[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password of the trust store file from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-cert-alias]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-certificate-trust-store-cert-alias[quarkus.http.ssl.certificate.trust-store-cert-alias]`


[.description]
--
An optional parameter to trust a single certificate from the trust store rather than trusting all certificates in the store.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-cipher-suites]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-cipher-suites[quarkus.http.ssl.cipher-suites]`


[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-protocols]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-protocols[quarkus.http.ssl.protocols]`


[.description]
--
Sets the ordered list of enabled SSL/TLS protocols.

If not set, it defaults to `"TLSv1.3, TLSv1.2"`. The following list of protocols are supported: `TLSv1, TLSv1.1, TLSv1.2, TLSv1.3`. To only enable `TLSv1.3`, set the value to `to "TLSv1.3"`.

Note that setting an empty list, and enabling SSL/TLS is invalid. You must at least have one protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-sni]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-http-ssl-sni[quarkus.http.ssl.sni]`


[.description]
--
Enables Server Name Indication (SNI), an TLS extension allowing the server to use multiple certificates. The client indicate the server name during the TLS handshake, allowing the server to select the right certificate.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HTTP_SSL_SNI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HTTP_SSL_SNI+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-credentials-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-credentials-provider[quarkus.management.ssl.certificate.credentials-provider]`


[.description]
--
The `CredentialsProvider`. If this property is configured, then a matching 'CredentialsProvider' will be used to get the keystore, keystore key, and truststore passwords unless these passwords have already been configured. Please note that using MicroProfile `ConfigSource` which is directly supported by Quarkus Configuration should be preferred unless using `CredentialsProvider` provides for some additional security and dynamism.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-credentials-provider-name]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-credentials-provider-name[quarkus.management.ssl.certificate.credentials-provider-name]`


[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-files]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-files[quarkus.management.ssl.certificate.files]`


[.description]
--
The list of path to server certificates using the PEM format. Specifying multiple files requires SNI to be enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-files]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-files[quarkus.management.ssl.certificate.key-files]`


[.description]
--
The list of path to server certificates private key files using the PEM format. Specifying multiple files requires SNI to be enabled. The order of the key files must match the order of the certificates.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-file]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-file[quarkus.management.ssl.certificate.key-store-file]`


[.description]
--
An optional key store that holds the certificate information instead of specifying separate files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-file-type]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-file-type[quarkus.management.ssl.certificate.key-store-file-type]`


[.description]
--
An optional parameter to specify the type of the key store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-provider[quarkus.management.ssl.certificate.key-store-provider]`


[.description]
--
An optional parameter to specify a provider of the key store file. If not given, the provider is automatically detected based on the key store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-password[quarkus.management.ssl.certificate.key-store-password]`


[.description]
--
A parameter to specify the password of the key store file. If not given, and if it can not be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|`password`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-password-key]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-password-key[quarkus.management.ssl.certificate.key-store-password-key]`


[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password of the key store file from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-key-alias]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-key-alias[quarkus.management.ssl.certificate.key-store-key-alias]`


[.description]
--
An optional parameter to select a specific key in the key store. When SNI is disabled, and the key store contains multiple keys and no alias is specified; the behavior is undefined.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_KEY_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_KEY_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-key-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-key-password[quarkus.management.ssl.certificate.key-store-key-password]`


[.description]
--
An optional parameter to define the password for the key, in case it is different from `key-store-password` If not given, it might be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-key-password-key]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-key-store-key-password-key[quarkus.management.ssl.certificate.key-store-key-password-key]`


[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password for the key from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_KEY_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-file]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-file[quarkus.management.ssl.certificate.trust-store-file]`


[.description]
--
An optional trust store that holds the certificate information of the trusted certificates.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-file-type]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-file-type[quarkus.management.ssl.certificate.trust-store-file-type]`


[.description]
--
An optional parameter to specify the type of the trust store file. If not given, the type is automatically detected based on the file name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-provider]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-provider[quarkus.management.ssl.certificate.trust-store-provider]`


[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-password]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-password[quarkus.management.ssl.certificate.trust-store-password]`


[.description]
--
A parameter to specify the password of the trust store file. If not given, it might be retrieved from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-password-key]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-password-key[quarkus.management.ssl.certificate.trust-store-password-key]`


[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password of the trust store file from `CredentialsProvider`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-cert-alias]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-certificate-trust-store-cert-alias[quarkus.management.ssl.certificate.trust-store-cert-alias]`


[.description]
--
An optional parameter to trust a single certificate from the trust store rather than trusting all certificates in the store.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-cipher-suites]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-cipher-suites[quarkus.management.ssl.cipher-suites]`


[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-protocols]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-protocols[quarkus.management.ssl.protocols]`


[.description]
--
Sets the ordered list of enabled SSL/TLS protocols.

If not set, it defaults to `"TLSv1.3, TLSv1.2"`. The following list of protocols are supported: `TLSv1, TLSv1.1, TLSv1.2, TLSv1.3`. To only enable `TLSv1.3`, set the value to `to "TLSv1.3"`.

Note that setting an empty list, and enabling SSL/TLS is invalid. You must at least have one protocol.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`TLSv1.3,TLSv1.2`


a| [[quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-sni]]`link:#quarkus-vertx-http-config-group-server-ssl-config_quarkus-management-ssl-sni[quarkus.management.ssl.sni]`


[.description]
--
Enables Server Name Indication (SNI), an TLS extension allowing the server to use multiple certificates. The client indicate the server name during the TLS handshake, allowing the server to select the right certificate.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_SNI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_SNI+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===